
Dingus codenamed "IC2005 demo"
========

050411:	Character animator now has history buffer for blending fast changing
		anims. Also can synch-blend walk cycles.
050411: Added ringdeque<T> to utils.
050410:	Removed unused anim abstraction layers (channels, context, listeners).
		Collapsed IAnimStream<T> and all derived classes into one concrete
		CAnimStream<T> class.